# napari-3d-ortho-viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/napari_3d_ortho_viewer/: __init__.py  _crop_dock_list_widget.py  _crop_dock_widget.py  _dock_widget.py  napari.yaml  toggle_visibility.py
src/napari_3d_ortho_viewer/_tests/: test_dock_widget.py  test_togglelayers.py
