[metadata]
name = napari-3d-ortho-viewer
version = 0.0.1
author = Niklas Netter
author_email = niknett@gmail.com
url = https://github.com/gatoniel/napari-3d-ortho-viewer
license = MIT
description = Napari 3D Ortho Viewer - an ortho viewer for napari for 3D images
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/gatoniel/napari-3d-ortho-viewer/issues
    Documentation = https://github.com/gatoniel/napari-3d-ortho-viewer#README.md
    Source Code = https://github.com/gatoniel/napari-3d-ortho-viewer
    User Support = https://github.com/gatoniel/napari-3d-ortho-viewer/issues

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-3d-ortho-viewer = napari_3d_ortho_viewer
